<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/bg_color"
    tools:context=".UpdateActivity">

    <TextView
        android:id="@+id/editNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="130dp"
        android:fontFamily="@font/agbalumo"
        android:text="@string/edit_task"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/updateSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/done_icon"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/editNoteHeading"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/savebutton" />

    <EditText
        android:id="@+id/updateTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/enter_the_title"
        android:padding="12dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        android:layout_below="@id/editNoteHeading"
        android:background="@drawable/gray_border"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:inputType="text" />

    <EditText
        android:id="@+id/updateContentEditText"
        android:layout_width="381dp"
        android:layout_height="303dp"
        android:layout_below="@id/updateTitleEditText"
        android:layout_marginTop="16dp"
        android:background="@drawable/gray_border"
        android:fontFamily="@font/poppins"
        android:gravity="top"
        android:textColor="@color/black"
        android:hint="@string/enter_the_description"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/updatePriorityEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/enter_priority"
        android:padding="12dp"
        android:textSize="20sp"
        android:fontFamily="@font/poppins"
        android:layout_below="@id/updateContentEditText"
        android:layout_marginTop="12dp"
        android:background="@drawable/gray_border"
        android:maxLines="1"
        android:textColor="@color/black"
        android:inputType="number" />

</RelativeLayout>
