<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:backgroundTint="@color/gray"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gray_border"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/title"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/updateButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/updatenote"
                android:src="@drawable/edit_icon" />

            <ImageView
                android:id="@+id/deleteButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/completenote"
                android:src="@drawable/completed_icon" />

        </RelativeLayout>

        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins"
            android:maxLines="3"
            android:text="@string/content"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/priorityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contentTextView"
            android:layout_marginTop="8dp"
            android:text="Priority: High"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <!-- Deadline TextView -->
        <TextView
            android:id="@+id/deadlineTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/priorityTextView"
            android:layout_marginTop="4dp"
            android:text="Deadline: 2024-10-10"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </LinearLayout>

</androidx.cardview.widget.CardView>